Styles for webpage: -Wrap entire site inside a fixed 960px-wide 'main' div. -Make background grey striped, and borders curved, like the offerwall. -Make form elements actually have a border.
git-svn-id: https://tapjoy.unfuddle.com/svn/tapjoy_tapjoyads/trunk@6469 6df48309-bd3c-4361-8df8-ec25136b6021

--- a/tapjoyads/public/stylesheets/tapjoy_graph.css
+++ b/tapjoyads/public/stylesheets/tapjoy_graph.css
@@ -34,5 +34,5 @@
 }
 
 .graph {
-  float: left;
+  display: inline-block;
 }
